feat: JWT login & full guards with Swagger lock
